# space-invaders

./: CMakeLists.txt
characters/: enemies.c  enemies.h  hero.c  hero.h
game/: enemies.c  enemies.h  game.c  game.h  hero.c  hero.h
graphics/: drawing.c  drawing.h
list/: list.c  list.h
src/: libraries.h  main.c
